--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <nav>
     <a routerLink="/todos">todo attivi</a>
     <a routerLink="/done">todo completati</a>
+    <a routerLink="/edit">Crea nuovo</a>
   </nav>
 </header>
 
