--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -15,8 +15,17 @@ button{
   border-radius: 4px;
   color: white;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .delete-btn{
   background-color: red;
+  cursor: pointer;
+}
+
+.edit-btn{
+  background-color: cornflowerblue;
+  margin: 4px;
+  padding: 4px;
+  cursor: pointer;
 }
