added chips & scss

--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -1,6 +1,11 @@
 .container{
+    // padding: 8px;
+    // display: flex;
+    // flex-direction: column;
+    // gap: 12px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     padding: 8px;
-    display: flex;
-    flex-direction: column;
+    margin: 8px;
     gap: 12px;
 }
