--- a/src/app/components/edit/edit.component.scss
+++ b/src/app/components/edit/edit.component.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    border-left: solid 3px crimson;
-    border-bottom: solid 3px crimson;
+    border-left: solid 3px ;
+    border-bottom: solid 3px ;
     border-bottom-left-radius: 8px;
     padding: 8px;
     margin: 8px;
