--- a/src/app/components/edit/edit.component.html
+++ b/src/app/components/edit/edit.component.html
@@ -5,20 +5,15 @@
         <mat-label>Todo Name</mat-label>
         <input matInput type="text"  [(ngModel)]="todo.name">
       </mat-form-field>
-      <mat-label>Priority: 
-        <span *ngIf="todo.priority === 0">Bassa</span>
-        <span *ngIf="todo.priority === 1">Media</span>
-        <span *ngIf="todo.priority === 2">Alta</span>
-        <span *ngIf="todo.priority === 3">Molto alta</span>
+      <mat-label>Priority: {{todo.priority | priorityString}}
     </mat-label>
       <mat-slider
-      [style.backgroundColor]="todo.priority | priorityColor"
+        
         class="example-margin"
-        [max]="3"
-        [min]="0"
+        max="3"
+        min="0"
         [tickInterval]="getSliderTickInterval()"
-        [(ngModel)]="todo.priority"
-        aria-labelledby="example-name-label">
+        [(ngModel)]="todo.priority">
     </mat-slider>
       <mat-form-field color="accent"  appearance="fill">
         <mat-label>Tags</mat-label>
